crates/varyk/tests/snapshots/errors__v0222_empty_segment.snap
---
source: crates/varyk/tests/errors.rs
expression: without_version(& stderr)
---
error[V0222]: `"/users//list"` is not a valid route path
 --> src/main.vr:9:13
  |
9 |     app.get("/users//list", list);
  |             ^^^^^^^^^^^^^^ `"/users//list"` is not a valid route path
  |
  = note: a path has no empty segment between two `/`
